# adv_mla_lab_1

./: Makefile  README.md  pyproject.toml  requirements.txt
adv_mla_lab_1/: __init__.py  dataset.py  features.py  plots.py
adv_mla_lab_1/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
