[tool.poetry]
name = "adv-mla-lab-1"
version = "0.1.0"
description = ""
authors = ["bryanbryan77 <71356626+bryanbryan77@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
